[project]
name = "comfy-mecha-utils"
description = "util nodes for custom node 'comfy-mecha'"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["sd-mecha>=0.0.29"]

[project.urls]
Repository = "https://github.com/jupo-ai/comfy-mecha-utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jupo-ai"
DisplayName = "comfy-mecha-utils"
Icon = ""
